--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^4.2.12",
+		"svelte": "^4.2.13",
 		"svelte-check": "^3.6.0",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
@@ -26,6 +26,13 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltestrap/sveltestrap": "^6.2.7",
+		"body-parser": "^1.20.2",
+		"express": "^4.19.2",
+		"formidable": "^3.5.1",
+		"nodemailer": "^6.9.13",
+		"onmount": "^1.3.0",
+		"otp-generator": "^4.0.1",
 		"svelte-routing": "^2.12.0"
 	}
 }
