--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
-  "name": "introspects-two",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-    "test": "vitest",
-    "lint": "prettier --check .",
-    "format": "prettier --write ."
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
-    "svelte": "^4.2.13",
-    "svelte-check": "^3.6.0",
-    "typescript": "^5.0.0",
-    "vite": "^5.2.8",
-    "vitest": "^1.2.0"
-  },
-  "type": "module",
-  "dependencies": {
-    "@sveltestrap/sveltestrap": "^6.2.7",
-    "svelte-routing": "^2.12.0"
-  },
-  "description": "Everything you need to build a Svelte project, powered by [`create-svelte`](https://github.com/sveltejs/kit/tree/main/packages/create-svelte).",
-  "main": "svelte.config.js",
-  "author": "",
-  "license": "ISC"
+	"name": "introspects-two",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+		"test": "vitest",
+		"lint": "prettier --check .",
+		"format": "prettier --write ."
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"svelte": "^4.2.13",
+		"svelte-check": "^3.6.0",
+		"typescript": "^5.0.0",
+		"vite": "^5.0.3",
+		"vitest": "^1.2.0"
+	},
+	"type": "module",
+	"dependencies": {
+		"@sveltestrap/sveltestrap": "^6.2.7",
+		"body-parser": "^1.20.2",
+		"express": "^4.19.2",
+		"formidable": "^3.5.1",
+		"nodemailer": "^6.9.13",
+		"onmount": "^1.3.0",
+		"otp-generator": "^4.0.1",
+		"svelte-routing": "^2.12.0"
+	}
 }
