--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
 	"dependencies": {
 		"@sveltestrap/sveltestrap": "^6.2.7",
 		"body-parser": "^1.20.2",
+		"cors": "^2.8.5",
+		"create-require": "^1.1.1",
 		"express": "^4.19.2",
 		"formidable": "^3.5.1",
+		"mongoose": "^8.3.2",
 		"nodemailer": "^6.9.13",
 		"onmount": "^1.3.0",
 		"otp-generator": "^4.0.1",
