--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
 		"nodemailer": "^6.9.13",
 		"onmount": "^1.3.0",
 		"otp-generator": "^4.0.1",
-		"svelte-routing": "^2.12.0"
+		"svelte-modals": "^1.3.0",
+		"svelte-routing": "^2.12.0",
+		"svelte-simple-modal": "^1.6.2"
 	}
 }
