--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"onmount": "^1.3.0",
 		"otp-generator": "^4.0.1",
 		"svelte-modals": "^1.3.0",
+		"svelte-notifications": "^0.9.98",
 		"svelte-routing": "^2.12.0",
 		"svelte-simple-modal": "^1.6.2"
 	}
