--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"svelte-modals": "^1.3.0",
 		"svelte-notifications": "^0.9.98",
 		"svelte-routing": "^2.12.0",
+		"svelte-select": "^5.8.3",
 		"svelte-simple-modal": "^1.6.2"
 	}
 }
