--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 		"create-require": "^1.1.1",
 		"express": "^4.19.2",
 		"formidable": "^3.5.1",
+		"gridjs": "^6.2.0",
+		"gridjs-svelte": "^2.1.1",
 		"mongoose": "^8.3.2",
 		"nodemailer": "^6.9.13",
 		"onmount": "^1.3.0",
