--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 		"formidable": "^3.5.1",
 		"gridjs": "^6.2.0",
 		"gridjs-svelte": "^2.1.1",
+		"lodash": "^4.17.21",
+		"lodash-es": "^4.17.21",
 		"mongoose": "^8.3.2",
 		"nodemailer": "^6.9.13",
 		"onmount": "^1.3.0",
